refactored backendErrors to now be errorMessages

--- a/client/src/CSS/scss_partials/authentication/_authentication.scss
+++ b/client/src/CSS/scss_partials/authentication/_authentication.scss
@@ -170,8 +170,8 @@
 		}
 	}
 
-	.backend-errors {
-		@include m.backend-error();
+	.error-messages {
+		@include m.error-messages();
 	}
 
 	.modal__form__submit {
