--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -35,13 +35,13 @@ body {
 		color: v.$mode-common-weak-text-color-dark;
 	}
 
-	// Light/Dark mode -- Common (i.e. intended for multiple components) 'backend-errors'
+	// Light/Dark mode -- Common (i.e. intended for multiple components) 'error-messages'
 	// ...element -- text color
-	.js-get-common-element-backend-errors-text-color-dark-mode-false {
-		color: v.$mode-common-backend-errors-text-color-light;
+	.js-get-common-element-error-messages-text-color-dark-mode-false {
+		color: v.$mode-common-error-messages-text-color-light;
 	}
-	.js-get-common-element-backend-errors-text-color-dark-mode-true {
-		color: v.$mode-common-backend-errors-text-color-dark;
+	.js-get-common-element-error-messages-text-color-dark-mode-true {
+		color: v.$mode-common-error-messages-text-color-dark;
 	}
 
 	// Light/Dark mode -- Common (i.e. intended for multiple components) char-count
